# emulator

./: CMakeLists.txt
core/src/: Console.hpp  Exceptions.hpp  Memory.cpp  Memory.hpp  Processor.cpp  Processor.hpp  ProcessorState.hpp  Register.hpp  RegisterBank.hpp  Types.hpp  test.cpp
core/src/Instructions/: Instruction.cpp  Instruction.hpp  InstructionData.cpp  InstructionData.hpp  Operations.hpp  RegisterOrImmediate.cpp  RegisterOrImmediate.hpp
core/src/Instructions/Operations/: Operation_Add.cpp  Operation_Add.hpp  Operation_Branch.hpp  Operation_Cycle.hpp  Operation_Divide.cpp  Operation_Divide.hpp  Operation_Halt.hpp  Operation_Load.cpp  Operation_Load.hpp  Operation_Logical.cpp  Operation_Logical.hpp  Operation_Multiply.cpp  Operation_Multiply.hpp  Operation_Remainder.cpp  Operation_Remainder.hpp  Operation_Rotate.cpp  Operation_Rotate.hpp  Operation_Shift.cpp  Operation_Shift.hpp  Operation_Store.cpp  Operation_Store.hpp  Operation_Subtract.cpp  Operation_Subtract.hpp
core/src/Instructions/Operations/Bases/: Operation_Base.cpp  Operation_Base.hpp  Operation_Base_Memory.cpp  Operation_Base_Memory.hpp
docs/: InstructionEncoding.md  Instructions.md  Memory.md  Registers.md
tests/: test_Console.cpp  test_Memory.cpp  test_Register.cpp
tests/instructions/operations/: test_Operation_Add.cpp  test_Operation_Cycle.cpp  test_Operation_Halt.cpp
